--- a/erdogan_kolluri_leinweber_01.ipynb
+++ b/erdogan_kolluri_leinweber_01.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -36,7 +36,7 @@
        "(160900, 38)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
       "author_location_city_2                    176 non-null object\n",
       "author_location_other                     22 non-null object\n",
       "num_of_followers/daily_unique_visitors    160893 non-null float64\n",
-      "professions                               2511 non-null object\n",
+      "professions                               2445 non-null object\n",
       "interests                                 5021 non-null object\n",
       "positive_objects                          41114 non-null object\n",
       "negative_objects                          19382 non-null object\n",
@@ -101,10 +101,19 @@
       "dtypes: float64(10), object(28)\n",
       "memory usage: 46.6+ MB\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "raw_df.info(10)"
+    "display(raw_df.info(10))"
    ]
   },
   {
@@ -319,15 +328,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Eliminate Rows & "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "      <td>Image</td>\n",
        "      <td>https://www.instagram.com/p/BZhsOjpD2eT/</td>\n",
        "      <td>instagram.com</td>\n",
-       "      <td>2017-09-27 02:42:30</td>\n",
+       "      <td>Sep 27, 2017 2:42:30 AM</td>\n",
        "      <td>Male</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -478,7 +478,7 @@
        "      <td>No Media</td>\n",
        "      <td>https://tumblr.com/ZIQdNd2PjEAqJ</td>\n",
        "      <td>tumblr.com</td>\n",
-       "      <td>2017-09-06 11:55:17</td>\n",
+       "      <td>Sep 6, 2017 11:55:17 AM</td>\n",
        "      <td>Unknown</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -502,7 +502,7 @@
        "      <td>Image</td>\n",
        "      <td>https://www.instagram.com/p/BY3rwa2FbCF/</td>\n",
        "      <td>instagram.com</td>\n",
-       "      <td>2017-09-10 19:10:17</td>\n",
+       "      <td>Sep 10, 2017 7:10:17 PM</td>\n",
        "      <td>Female</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -526,7 +526,7 @@
        "      <td>Image</td>\n",
        "      <td>https://tumblr.com/Znmy7e2QKxIlo</td>\n",
        "      <td>tumblr.com</td>\n",
-       "      <td>2017-09-25 02:01:06</td>\n",
+       "      <td>Sep 25, 2017 2:01:06 AM</td>\n",
        "      <td>Unknown</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -550,7 +550,7 @@
        "      <td>Image</td>\n",
        "      <td>http://67.227.255.239/forum/showthread.php?t=1...</td>\n",
        "      <td>67.227.255.239</td>\n",
-       "      <td>2017-09-25 01:00:00</td>\n",
+       "      <td>Sep 25, 2017 1:00:00 AM</td>\n",
        "      <td>Male</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -599,11 +599,11 @@
        "22  http://67.227.255.239/forum/showthread.php?t=1...  67.227.255.239   \n",
        "\n",
        "   published_date_gmt_london author_gender   ...   quoted_author_name  \\\n",
-       "4        2017-09-27 02:42:30          Male   ...                  NaN   \n",
-       "5        2017-09-06 11:55:17       Unknown   ...                  NaN   \n",
-       "16       2017-09-10 19:10:17        Female   ...                  NaN   \n",
-       "18       2017-09-25 02:01:06       Unknown   ...                  NaN   \n",
-       "22       2017-09-25 01:00:00          Male   ...                  NaN   \n",
+       "4    Sep 27, 2017 2:42:30 AM          Male   ...                  NaN   \n",
+       "5    Sep 6, 2017 11:55:17 AM       Unknown   ...                  NaN   \n",
+       "16   Sep 10, 2017 7:10:17 PM        Female   ...                  NaN   \n",
+       "18   Sep 25, 2017 2:01:06 AM       Unknown   ...                  NaN   \n",
+       "22   Sep 25, 2017 1:00:00 AM          Male   ...                  NaN   \n",
        "\n",
        "   quoted_author_handle total_engagements post_comments post_likes  \\\n",
        "4                   NaN              76.0           5.0       71.0   \n",
@@ -813,13 +813,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Context-Aware Sentiment Analysis on POS Tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coke Sentiment for Top 100 words - done by average sentiment of sentences they are in\n",
+    "from collections import defaultdict\n",
+    "from nltk import word_tokenize\n",
+    "import csv\n",
+    "\n",
+    "pos_tags = [\"VERB\", \"ADJ\", \"NOUN\", \"ADV\"]\n",
+    "def generate_sent_analysis(counts, df, pos, prefix): \n",
+    "    count_sent_averages = {}\n",
+    "    \n",
+    "    def check_sents(index):\n",
+    "        indexed_df = df.loc[df.sound_bite_text.str.contains(index)]\n",
+    "        count_sent_averages[index.encode('utf-8')] = indexed_df.sent.mean()\n",
+    "\n",
+    "    counter = Counter(counts[pos])\n",
+    "    reduced_counts = pd.DataFrame.from_dict(counter, orient=\"index\").sort_values(0, ascending=False)[:100]\n",
+    "    indexes = list(reduced_counts.index.values)\n",
+    "    reduced_counts.apply(lambda row: check_sents(row.name), axis=1)\n",
+    "    \n",
+    "    file_name = prefix + pos + \"_sent\"\n",
+    "    with open(file_name, 'wb') as csv_file:\n",
+    "        writer = csv.writer(csv_file)\n",
+    "        for key, value in count_sent_averages.items():\n",
+    "           writer.writerow([key, value])\n",
+    "\n",
+    "for pos in pos_tags:\n",
+    "    generate_sent_analysis(coke_counts, coke_df, pos, \"coke_\")\n",
+    "    generate_sent_analysis(pepsi_counts, pepsi_df, pos, \"pepsi_\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Graphs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -924,6 +978,360 @@
     "    counter_df = pd.DataFrame.from_dict(counter, orient=\"index\")\n",
     "    reduced_count_df = counter_df.loc[counter_df[0] > 1000]\n",
     "    reduced_count_df.plot(kind=\"bar\", title=pos)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>r4r</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>all</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dawnfranklin</th>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>comically</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>poorly</th>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>adventure#loveauthentic#wandersession#wanderlust</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>seriously</th>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>khule</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dragonballz</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>@</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>@advertisingage</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>😁😄😃😀😁#football</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>imagesofnorway</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>every</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>storytime</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bestway</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nomnomnom</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ontheroadagain</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>utno</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>caafootball</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>somerby</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>@nygovcuomo</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>relentlessly</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>no.1</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>delightfully</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>specially</th>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>disneyside</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worldinmyeyes</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>likely</th>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>louder</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>icecreamlover</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>newsdaily</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>diligently</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>supreme</th>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>@sadschady</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>@grumpychat</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>жити</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mattelhoverboard</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>meth</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>deeper</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weddingdress</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nonetheless</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lately</th>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>onwards</th>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>incredibly</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mesmerisingly</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>illegally</th>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pll4ever</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lovemyfamily</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weeaboo</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>backstage</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kinda</th>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>missiontx</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>wellsandco</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>upwards</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hotmemes</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>@ddesouz</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>squeakily</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>@therealdjrunna</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>indirectly</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1690 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    0\n",
+       "r4r                                                 3\n",
+       "all                                                 8\n",
+       "dawnfranklin                                       41\n",
+       "comically                                           1\n",
+       "poorly                                             12\n",
+       "adventure#loveauthentic#wandersession#wanderlust    1\n",
+       "seriously                                          36\n",
+       "khule                                               6\n",
+       "dragonballz                                         2\n",
+       "@                                                   2\n",
+       "@advertisingage                                     1\n",
+       "😁😄😃😀😁#football                                 1\n",
+       "imagesofnorway                                      1\n",
+       "every                                               1\n",
+       "storytime                                           2\n",
+       "bestway                                             1\n",
+       "nomnomnom                                           1\n",
+       "ontheroadagain                                      1\n",
+       "utno                                                3\n",
+       "caafootball                                         1\n",
+       "somerby                                             1\n",
+       "@nygovcuomo                                         1\n",
+       "relentlessly                                        1\n",
+       "no.1                                                1\n",
+       "delightfully                                        1\n",
+       "specially                                         123\n",
+       "disneyside                                          1\n",
+       "worldinmyeyes                                       1\n",
+       "likely                                             11\n",
+       "louder                                              1\n",
+       "...                                               ...\n",
+       "icecreamlover                                       2\n",
+       "newsdaily                                           2\n",
+       "diligently                                          1\n",
+       "supreme                                            90\n",
+       "@sadschady                                          1\n",
+       "@grumpychat                                         1\n",
+       "жити                                                1\n",
+       "mattelhoverboard                                    1\n",
+       "meth                                                1\n",
+       "deeper                                              1\n",
+       "weddingdress                                        1\n",
+       "nonetheless                                         1\n",
+       "lately                                             11\n",
+       "onwards                                            13\n",
+       "incredibly                                          3\n",
+       "mesmerisingly                                       1\n",
+       "illegally                                          24\n",
+       "pll4ever                                            2\n",
+       "lovemyfamily                                        1\n",
+       "weeaboo                                             2\n",
+       "backstage                                           5\n",
+       "kinda                                              19\n",
+       "missiontx                                           2\n",
+       "wellsandco                                          1\n",
+       "upwards                                             1\n",
+       "hotmemes                                            1\n",
+       "@ddesouz                                            1\n",
+       "squeakily                                           1\n",
+       "@therealdjrunna                                     2\n",
+       "indirectly                                          3\n",
+       "\n",
+       "[1690 rows x 1 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(counter_df)"
    ]
   },
   {
